--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="login-box">
-      <!--  <img class="avatar" src="img/logo2.jpg" alt="Logo de fazt"> -->
+      <img class="avatar" src="img/logo2.jpg" alt="Logo de fazt">
         <h1>Login Here</h1>
         <form>
             <!--user name-->
