--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img class="avatar" src="img/logo2.jpg" alt="Logo de fazt">
         <h1>Login Here</h1>
         <form>
-            <!--user name-->
+            <!--user name-- popo -->
             <label for="username">Username</label>
             <input type="text" placeholder="Ingrese nombre de usuario" id="username">
 
