--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <label for="password">Pasword</label>
             <input type="password" placeholder="Ingrese contraseña" id="password">
 
-            <a href="contrasena.html" onclick="return validate();">
+            <a href="views/contrasena.html" onclick="return validate();">
             <input type="button" value="Log In"> <!--onclick="validate() -->
             </a>
-            <a href="contrasena.html">Perdiste la contraseña?</a>
+            <a href="views/contrasena.html">Perdiste la contraseña?</a>
             <br>
             <a href="#">No tienes cuenta?</a>
         </form>
