--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <label for="username">Username</label>
             <input type="text" placeholder="Ingrese nombre de usuario" id="username">
 
-            <label for="password">Pasword</label>
+            <label for="password">Password</label>
             <input type="password" placeholder="Ingrese contraseña" id="password">
 
             <a href="views/contrasena.html" onclick="return validate();">
